feat(auth): sign up user with email and password in Firebase
- Handle Firebase authentication exceptions